--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/SelectPlaces.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/SelectPlaces.cshtml
@@ -83,76 +83,76 @@
             }
 
             @*<table class="table">
-                <thead>
-                    <tr>
-                        <th>
-                            <input type="checkbox" name="selectAll" />
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Name)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Type)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Address)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.WorkTimeStart)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.WorkTimeFinish)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Rating)
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @{
-                        foreach (var element in ViewBag.TagedPlace)
-                        {
-                            <tr>
-                                <h3>@element.Key</h3>
-                            </tr>
+                    <thead>
+                        <tr>
+                            <th>
+                                <input type="checkbox" name="selectAll" />
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Name)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Type)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Address)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.WorkTimeStart)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.WorkTimeFinish)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Rating)
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @{
+                            foreach (var element in ViewBag.TagedPlace)
                             {
-                                foreach (var place in Model) //(var place in element.Value)
+                                <tr>
+                                    <h3>@element.Key</h3>
+                                </tr>
                                 {
-                                    if (place.Type==element.Key)
+                                    foreach (var place in Model) //(var place in element.Value)
                                     {
-                                        <tr>
-                                            <td>
-                                                <input type="checkbox" name="@place.GetHashCode()" />
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => place.Name)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => place.Type)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => place.Address)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => place.WorkTimeStart)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => place.WorkTimeFinish)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => place.Rating)
-                                            </td>
-                                        </tr>
+                                        if (place.Type==element.Key)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    <input type="checkbox" name="@place.GetHashCode()" />
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => place.Name)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => place.Type)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => place.Address)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => place.WorkTimeStart)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => place.WorkTimeFinish)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => place.Rating)
+                                                </td>
+                                            </tr>
+                                        }
+
+
                                     }
-
-
                                 }
-                            }
 
+                            }
                         }
-                    }
-                </tbody>
-            </table>*@
+                    </tbody>
+                </table>*@
             @*<input class="btn btn-light" type="submit" value="Create Trip" name="submit" onclick="getCheckedPlaces" />*@
 
         </div>
@@ -167,7 +167,46 @@
     </div>
 </form>
 
+<style>
+    #map, #map_canvas {
+        width: 1000px;
+        height: 500px;
+    }
+</style>
+
+<div id="map_canvas" style="width: 1000px; height: 500px;"></div>
+
+
+<div>
+    <div id="map"></div>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7tnGRfh4zut21AaOKJpBEGIh7UXJobVM&callback=initMap">
+    </script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript">
+        var map;
+
+        function initialize() {
+            var myLatlng = new google.maps.LatLng(49.8382600, 24.0232400);
+
+            var myOptions = {
+                zoom: 12,
+                center: myLatlng,
+                mapTypeId: google.maps.MapTypeId.ROADMAP
+            };
+            map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+
+
+
+        }
+
+        google.maps.event.addDomListener(window, "load", initialize());
+    </script>
+</div>
+
+
 <script type="text/javascript">
+
     function changePlaceState(paramName) {
         //console.log(paramName.checked);
         if ((paramName.checked == true)) {
@@ -187,7 +226,7 @@
     function getCheckedPlaces() {
         var checkedB = document.querySelectorAll("input[type=checkbox]:checked"); // дай мені хвилинку
         console.log(checkedB.checked);
-       
+
         @*var places = @Model;*@
         //var places = new type();
         var chB = '';
@@ -203,7 +242,7 @@
         //$("div").text(checkedB.length);
     }
     function Create(filters) {
-        
+
         $.ajax({
             url: '/Trips/CreateTrip',
                 type: 'POST',
@@ -221,10 +260,10 @@
             });
 
     }
-  
-    
 
-  
+
+
+
 </script>
 <script type="text/javascript">
     function CreatePath() {
