--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/SelectPlaces.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/SelectPlaces.cshtml
@@ -12,28 +12,28 @@
             @{
                 foreach (var element in ViewBag.TagedPlace)
                 {
-                    <table class="table table-striped table-hover table-condensed">
+                    <table id="table_@element.Key" class="table table-striped table-hover table-condensed">
                         <thead class="">
                             <tr>
                                 <th>
 
                                 </th>
-                                <th>
+                                <th onclick="sortTable(1)">
                                     @Html.DisplayNameFor(model => model.Name)
                                 </th>
-                                <th>
+                                <th onclick="sortTable(2)">
                                     @Html.DisplayNameFor(model => model.Type)
                                 </th>
-                                <th>
+                                <th onclick="sortTable(3)">
                                     @Html.DisplayNameFor(model => model.Address)
                                 </th>
-                                <th>
+                                <th onclick="sortTable(4)">
                                     @Html.DisplayNameFor(model => model.WorkTimeStart)
                                 </th>
-                                <th>
+                                <th onclick="sortTable(5)">
                                     @Html.DisplayNameFor(model => model.WorkTimeFinish)
                                 </th>
-                                <th>
+                                <th onclick="sortTable(6)">
                                     @Html.DisplayNameFor(model => model.Rating)
                                 </th>
                             </tr>
@@ -231,22 +231,59 @@
             });
     }
 
-    function getTrip(filters) {
-        $.ajax({
-                url: '/Trips/CreateTrip',
-                type: 'POST',
-                cache: false,
-                async: true,
-                dataType: "html",
-                data: filters
-            })
-            .done(function (result) {
-                alert('success');
-                $('body').html(result);
-
-            }).fail(function (xhr) {
-                console.log('error : ' + xhr.status + ' - ' + xhr.statusText + ' - ' + xhr.responseText);
-            });
+    function sortTable(n) {
+        var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+        table = document.getElementById("myTable2");
+        switching = true;
+        // Set the sorting direction to ascending:
+        dir = "asc"; 
+        /* Make a loop that will continue until
+        no switching has been done: */
+        while (switching) {
+            // Start by saying: no switching is done:
+            switching = false;
+            rows = table.rows;
+            /* Loop through all table rows (except the
+            first, which contains table headers): */
+            for (i = 1; i < (rows.length - 1); i++) {
+                // Start by saying there should be no switching:
+                shouldSwitch = false;
+                /* Get the two elements you want to compare,
+                one from current row and one from the next: */
+                x = rows[i].getElementsByTagName("TD")[n];
+                y = rows[i + 1].getElementsByTagName("TD")[n];
+                /* Check if the two rows should switch place,
+                based on the direction, asc or desc: */
+                if (dir == "asc") {
+                    if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+                        // If so, mark as a switch and break the loop:
+                        shouldSwitch = true;
+                        break;
+                    }
+                } else if (dir == "desc") {
+                    if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+                        // If so, mark as a switch and break the loop:
+                        shouldSwitch = true;
+                        break;
+                    }
+                }
+            }
+            if (shouldSwitch) {
+                /* If a switch has been marked, make the switch
+                and mark that a switch has been done: */
+                rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+                switching = true;
+                // Each time a switch is done, increase this count by 1:
+                switchcount ++; 
+            } else {
+                /* If no switching has been done AND the direction is "asc",
+                set the direction to "desc" and run the while loop again. */
+                if (switchcount == 0 && dir == "asc") {
+                    dir = "desc";
+                    switching = true;
+                }
+            }
+        }
     }
 </script>
 <script type="text/javascript">
